<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/weather"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageView"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/weather"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:contentDescription="@string/cloudy_and_sunny" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_32_c"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/toronto_us"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/monday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/monday"
        style="@style/TextWeatherStyle"
        android:text="@string/day1"
        app:layout_constraintEnd_toStartOf="@+id/tuesday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintBottom_toTopOf="@id/image1"
        />

    <TextView
        android:id="@+id/tuesday"
        style="@style/TextWeatherStyle"
        android:text="@string/day2"
        app:layout_constraintBottom_toBottomOf="@+id/monday"
        app:layout_constraintEnd_toStartOf="@+id/wednesday"
        app:layout_constraintStart_toEndOf="@+id/monday"
        app:layout_constraintTop_toTopOf="@id/monday" />



    <TextView
        android:id="@+id/wednesday"
        style="@style/TextWeatherStyle"
        android:text="@string/day3"
        app:layout_constraintBottom_toBottomOf="@+id/tuesday"
        app:layout_constraintEnd_toStartOf="@+id/thursday"
        app:layout_constraintStart_toEndOf="@+id/tuesday"
        app:layout_constraintTop_toTopOf="@id/tuesday" />


    <TextView
        android:id="@+id/thursday"
        style="@style/TextWeatherStyle"
        android:text="@string/day4"
        app:layout_constraintBottom_toBottomOf="@id/wednesday"
        app:layout_constraintEnd_toStartOf="@+id/friday"
        app:layout_constraintStart_toEndOf="@+id/wednesday"
        app:layout_constraintTop_toTopOf="@id/wednesday" />

    <TextView
        android:id="@+id/friday"
        style="@style/TextWeatherStyle"
        android:text="@string/day5"
        app:layout_constraintBottom_toBottomOf="@id/thursday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/thursday"
        app:layout_constraintTop_toTopOf="@id/thursday" />


    <TextView
        android:id="@+id/mon1"
        style="@style/TextWeatherStyle"
        android:text="@string/weather1"
        app:layout_constraintTop_toBottomOf="@id/image1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tue1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="10dp"
        />

    <TextView
        android:id="@+id/tue1"
        style="@style/TextWeatherStyle"
        android:text="@string/weather2"
        app:layout_constraintTop_toTopOf="@id/mon1"
        app:layout_constraintBottom_toBottomOf="@id/mon1"
        app:layout_constraintStart_toEndOf="@id/mon1"
        app:layout_constraintEnd_toStartOf="@id/wed1"
        android:paddingBottom="10dp"
        />


    <TextView
        android:id="@+id/wed1"
        style="@style/TextWeatherStyle"
        android:text="@string/weather3"
        app:layout_constraintTop_toTopOf="@id/tue1"
        app:layout_constraintBottom_toBottomOf="@id/tue1"
        app:layout_constraintStart_toEndOf="@id/tue1"
        app:layout_constraintEnd_toStartOf="@id/thu1"
        android:paddingBottom="10dp"
        />


    <TextView
        android:id="@+id/thu1"
        style="@style/TextWeatherStyle"
        android:text="@string/weather4"
        app:layout_constraintTop_toTopOf="@id/wed1"
        app:layout_constraintBottom_toBottomOf="@id/wed1"
        app:layout_constraintStart_toEndOf="@id/wed1"
        app:layout_constraintEnd_toStartOf="@id/fri1"
        android:paddingBottom="10dp"
        />


    <TextView
        android:id="@+id/fri1"
        style="@style/TextWeatherStyle"
        android:text="@string/weather5"
        app:layout_constraintTop_toTopOf="@id/thu1"
        app:layout_constraintBottom_toBottomOf="@id/thu1"
        app:layout_constraintStart_toEndOf="@id/thu1"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="10dp"
        />


    <ImageView
        android:id="@+id/image1"
        android:src="@drawable/weather"
        style="@style/WeatherImage"
        app:layout_constraintBottom_toTopOf="@id/mon1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image2"
        app:layout_constraintTop_toBottomOf="@id/monday"
        android:contentDescription="@string/cloudy_and_sunny" />

    <ImageView
        android:id="@+id/image2"
        android:src="@drawable/sun"
        style="@style/WeatherImage"
        app:layout_constraintTop_toBottomOf="@id/tuesday"
        app:layout_constraintBottom_toTopOf="@id/tue1"
        app:layout_constraintEnd_toStartOf="@id/image3"
        app:layout_constraintStart_toEndOf="@id/image1"
        android:contentDescription="@string/sunny" />

    <ImageView
        android:id="@+id/image3"
        android:src="@drawable/sun"
        style="@style/WeatherImage"
        app:layout_constraintTop_toBottomOf="@id/wednesday"
        app:layout_constraintEnd_toStartOf="@id/image4"
        app:layout_constraintBottom_toTopOf="@id/wed1"
        app:layout_constraintStart_toEndOf="@id/image2"
        android:contentDescription="@string/sunny" />


    <ImageView
        android:id="@+id/image4"
        android:src="@drawable/weather"
        style="@style/WeatherImage"
        app:layout_constraintTop_toBottomOf="@id/thursday"
        app:layout_constraintEnd_toStartOf="@id/image5"
        app:layout_constraintBottom_toTopOf="@id/thu1"
        app:layout_constraintStart_toEndOf="@id/image3"
        android:contentDescription="@string/cloudy_and_sunny" />

    <ImageView
        android:id="@+id/image5"
        android:src="@drawable/rain"
        style="@style/WeatherImage"
        app:layout_constraintTop_toBottomOf="@id/friday"
        app:layout_constraintBottom_toTopOf="@id/fri1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image4"
        android:contentDescription="@string/rain" />

</androidx.constraintlayout.widget.ConstraintLayout>